# agent-triage

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  events_seed42.ndjson  pyproject.toml  scratch.py  triage.example.toml
.github/workflows/: ci.yml  release.yml
docker-compose/: .env  README.md  docker-compose.yaml  otel-collector-config.yaml  prometheus.yaml
docker-compose/envoy/: Dockerfile.envoy  entrypoint.sh  envoy.yaml.tmpl
examples/: compare-before-after.md  emit_otlp.py  monday-report.md  otel-report.md  seed42-report.md
runs/examples/: before.ndjson  monday.ndjson  otel.json
src/triage/: __init__.py  adapters.py  alerting.py  analyst.py  cli.py  comparer.py  config.py  grouper.py  loader.py  reporter.py  scorer.py  server.py  store.py  streaming.py
src/triage/templates/: dashboard.html
tests/: conftest.py  test_adapters.py  test_alerting.py  test_analyst.py  test_comparer.py  test_config.py  test_grouper.py  test_integration.py  test_loader.py  test_loader_otlp.py  test_reporter.py  test_scorer.py  test_server.py  test_store.py  test_streaming.py
triage-service/: Dockerfile  main.py  requirements.txt  ui.html
