[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage"
version = "0.1.0"
description = "CLI tool that ranks agent trace failures by severity for morning triage"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydantic>=2.0",
]

[project.scripts]
triage = "triage.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]
service = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/triage"]
omit = ["tests/*"]
