[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "triage"
version = "0.1.0"
description = "CLI tool that ranks agent trace failures by severity for morning triage"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
dependencies = [
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
]

[project.scripts]
triage = "triage.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["src/triage"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/triage"]
plugins = ["pydantic.mypy"]
