[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-triage"
version = "0.1.0"
description = "Rank multi-agent trace failures by severity. CLI + web dashboard + OTLP receiver, with optional LLM root-cause analysis."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{name = "Bharath kumar R"}]
keywords = [
    "agents",
    "multi-agent",
    "llm",
    "observability",
    "triage",
    "opentelemetry",
    "otlp",
    "anthropic",
    "claude",
    "debugging",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Debuggers",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "click>=8.1,<9",
    "pydantic>=2.0,<3",
]

[project.urls]
Homepage = "https://github.com/thebharathkumar/agent-triage"
Repository = "https://github.com/thebharathkumar/agent-triage"
Issues = "https://github.com/thebharathkumar/agent-triage/issues"
Changelog = "https://github.com/thebharathkumar/agent-triage/releases"

[project.scripts]
triage = "triage.cli:main"
triage-serve = "triage.server:serve"

[project.optional-dependencies]
ai = ["anthropic>=0.40,<2"]
server = [
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.23,<1",
    "python-multipart>=0.0.7,<1",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.40,<2",
    "fastapi>=0.100,<1",
    "uvicorn[standard]>=0.23,<1",
    "python-multipart>=0.0.7,<1",
    "httpx>=0.24",
]

[tool.hatch.build.targets.wheel]
packages = ["src/triage"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/triage"]
omit = ["tests/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/triage/server.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/triage"]
plugins = ["pydantic.mypy"]
